[tool.poetry]
name = "swing-tool-gui"
version = "1.1.1"
description = ""
authors = ["Aiden Huang <ahuang9688@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
Kivy = "^2.3.0"
swing-tool = {git = "https://github.com/ahuang0808/swing-tool.git", rev = "v1.1.1"}
olefile = "^0.47"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
black = "^24.8.0"
flake8-pyproject = "^1.2.3"
isort = "^5.13.2"
pyinstaller = "^6.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.flake8]
exclude = ["build", ".git"]
max-line-length = 88
